# iccs205-homework

./: 6580572_Covid_interpolation (1).ipynb  Homework2.ipynb  pyproject.toml
hw1/: Homework1.ipynb
hw2/: Homework2.ipynb
hw3/: Homework3.ipynb
